fix word wrap bug

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -86,6 +86,9 @@ p {
 	padding: 10px;
 	margin: 0;
 
+	/* typography */
+	word-wrap: break-word;
+
 	/* visual decorations */
 	color: black;
 }
